--- a/package.json
+++ b/package.json
@@ -29,10 +29,16 @@
     "@types/node": "^12.20.0",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "i18next": "^19.8.7",
+    "jimp": "^0.16.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.6",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
@@ -59,5 +65,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.16"
   }
 }
