--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^12.20.0",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "clsx": "^1.1.1",
     "i18next": "^19.8.7",
     "jimp": "^0.16.1",
     "node-sass": "^5.0.0",
